--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -13,7 +13,7 @@
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 .navbar .heading {
-    color: #fd5252;
+    color: #386641;
     font-size: 20px;
     font-weight: 700;
     font-family: 'Poppins', sans-serif;
